switch to virtual theads - simpler code, same performance